--- a/MyCShapeDemo/MyCShapeDemo.csproj
+++ b/MyCShapeDemo/MyCShapeDemo.csproj
@@ -48,7 +48,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>MyCShapeDemo.DictionaryDemo</StartupObject>
+    <StartupObject>MyCShapeDemo.DateTimeDemo</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DateTimeDemo.cs" />
     <Compile Include="DictionaryDemo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
